Fix name of responses
