# routers/api/v1/repo/hook.go
@@ -21,7 +21,7 @@ func ListHooks(ctx *context.APIContext) {
 	//     - application/json
 	//
 	//     Responses:
-	//       200: apiHooks
+	//       200: HookList
 	//       500: error
 
 	hooks, err := models.GetWebhooksByRepoID(ctx.Repo.Repository.ID)
@@ -59,7 +59,7 @@ func CreateHook(ctx *context.APIContext, form api.CreateHookOption) {
 	//     - application/json
 	//
 	//     Responses:
-	//       200: apiHook
+	//       200: Hook
 	//       422: validationError
 	//       500: error
 
@@ -77,7 +77,7 @@ func EditHook(ctx *context.APIContext, form api.EditHookOption) {
 	//     - application/json
 	//
 	//     Responses:
-	//       200: apiHook //TODO
+	//       200: Hook
 	//       422: validationError
 	//       500: error
 
